# ultra-qt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
backend/: CMakeLists.txt
gui/views/: FileStructureView.qml  WorkBarView.qml
src/: main.cpp
src/backend/: main.cpp  parser.cpp  parser.h
src/gui/: Main.qml
src/gui/components/: FileLabel.qml
src/gui/views/: FileStructureView.qml  MapView.qml  WorkBarView.qml
